--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <link rel="stylesheet" href="style.css" />
     <title>Calculadora</title>
   </head>
-  <body></body>
+  <body>
+    <main class="container">
+      <div class="display"></div>
+      <div class="row-1">
+        <button class="btn btn-red">CE</button>
+        <button class="btn btn-orange">C</button>
+        <button class="btn btn-green">+</button>
+        <button class="btn btn-green">%</button>
+      </div>
+      <div class="row-1">
+        <button class="btn btn-blue">7</button>
+        <button class="btn btn-blue">8</button>
+        <button class="btn btn-blue">9</button>
+        <button class="btn btn-green">/</button>
+      </div>
+      <div class="row-1">
+        <button class="btn btn-blue">4</button>
+        <button class="btn btn-blue">5</button>
+        <button class="btn btn-blue">6</button>
+        <button class="btn btn-green">*</button>
+      </div>
+      <div class="row-1">
+        <button class="btn btn-blue">1</button>
+        <button class="btn btn-blue">2</button>
+        <button class="btn btn-blue">3</button>
+        <button class="btn btn-green">-</button>
+      </div>
+      <div class="row-1">
+        <button class="btn btn-blue">0</button>
+        <button class="btn btn-blue">.</button>
+        <button class="btn btn-orange">=</button>
+        <button class="btn btn-green">+</button>
+      </div>
+    </main>
+  </body>
   <script src="codigo.js"></script>
 </html>
