--- a/index.html
+++ b/index.html
@@ -11,36 +11,36 @@
     <main class="container">
       <div class="display"></div>
       <div class="row-1">
-        <button class="btn btn-red">CE</button>
-        <button class="btn btn-orange">C</button>
-        <button class="btn btn-green">+</button>
+        <button class="btn btn-red" id="btn-C">C</button>
+        <button class="btn btn-orange" id="btn-CE">CE</button>
+        <button class="btn btn-green" id="btn-menos">+-</button>
         <button class="btn btn-green">%</button>
       </div>
       <div class="row-1">
-        <button class="btn btn-blue">7</button>
-        <button class="btn btn-blue">8</button>
-        <button class="btn btn-blue">9</button>
-        <button class="btn btn-green">/</button>
+        <button class="btn btn-blue js-number" id="btn-CE">7</button>
+        <button class="btn btn-blue js-number" id="btn-CE">8</button>
+        <button class="btn btn-blue js-number" id="btn-CE">9</button>
+        <button class="btn btn-green" id="btn-CE">/</button>
       </div>
       <div class="row-1">
-        <button class="btn btn-blue">4</button>
-        <button class="btn btn-blue">5</button>
-        <button class="btn btn-blue">6</button>
-        <button class="btn btn-green">*</button>
+        <button class="btn btn-blue js-number" id="btn-CE">4</button>
+        <button class="btn btn-blue js-number" id="btn-CE">5</button>
+        <button class="btn btn-blue js-number" id="btn-CE">6</button>
+        <button class="btn btn-green" id="btn-CE">*</button>
       </div>
       <div class="row-1">
-        <button class="btn btn-blue">1</button>
-        <button class="btn btn-blue">2</button>
-        <button class="btn btn-blue">3</button>
-        <button class="btn btn-green">-</button>
+        <button class="btn btn-blue js-number" id="btn">1</button>
+        <button class="btn btn-blue js-number" id="btn-CE">2</button>
+        <button class="btn btn-blue js-number" id="btn-CE">3</button>
+        <button class="btn btn-green" id="btn-CE">-</button>
       </div>
       <div class="row-1">
-        <button class="btn btn-blue">0</button>
-        <button class="btn btn-blue">.</button>
-        <button class="btn btn-orange">=</button>
-        <button class="btn btn-green">+</button>
+        <button class="btn btn-blue js-number" id="btn-CE">0</button>
+        <button class="btn btn-blue" id="btn-CE">.</button>
+        <button class="btn btn-orange" id="btn-CE">=</button>
+        <button class="btn btn-green" id="btn-CE">+</button>
       </div>
     </main>
   </body>
-  <script src="codigo.js"></script>
+  <script src="calculadora.js"></script>
 </html>
